Now the code overflow is finally fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ pre {
 }
 
 .highlight code {
-    overflow-x: scroll;
+    overflow-x: auto;
     display: block;
 }
 
